<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:text="@string/about_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme"/>

        <TextView
            android:text="@string/about_description"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <TextView
            android:text="@string/about_developer_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme"/>

        <TextView
            android:text="@string/app_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/blue"/>

        <TextView
            android:text="@string/about_developer_text"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <TextView
            android:text="@string/about_guide_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_book"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/theme"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_use"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calender"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/theme"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calender_use"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notepad"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/theme"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notepad_use"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:text="@string/app_version"
            android:textSize="14sp"
            android:layout_marginBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/theme"/>

        <Button
            android:id="@+id/btn_back_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_home"
            android:textColor="@color/white"
            android:backgroundTint="@color/theme"/>

    </LinearLayout>

</ScrollView>