<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:text="@string/privacy_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme"/>

        <TextView
            android:text="@string/privacy_content"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <TextView
            android:text="@string/data_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:textColor="@color/theme"
            />

        <TextView
            android:text="@string/this_application_does_not_collect_store_or_share_any_personal_data_from_users_all_notes_and_information_created_within_the_application_are_stored_locally_on_your_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/data_usage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/theme"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:text="@string/any_information_entered_into_the_application_such_as_notes_is_used_solely_for_the_purpose_of_providing_the_app_s_features_and_remains_private_to_the_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/third_party_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/theme"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:text="@string/this_application_does_not_use_third_party_services_that_collect_personal_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/theme"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>

        <TextView
            android:text="@string/your_data_remains_on_your_device_and_is_not_transmitted_to_any_external_servers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/user_responsibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/theme"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:text="@string/users_are_responsible_for_managing_and_protecting_their_own_device_and_the_information_stored_within_the_application"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:text="@string/by_using_this_application_you_agree_to_this_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btn_back_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_home"
            android:backgroundTint="@color/theme"
            android:textColor="@color/white"/>

    </LinearLayout>

</ScrollView>