<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <!-- Title -->
    <TextView
        android:id="@+id/editor_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_note"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Bottom buttons -->
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/theme"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clear_button"/>

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#6B2929"
        android:text="@string/clear"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/save_button"
         />

    <!-- Scrollable editor area -->
    <ScrollView
        android:id="@+id/editor_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/clear_button"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editor_date_text"
        app:layout_constraintVertical_bias="0.063">

        <!-- ScrollView must have exactly one child -->
        <EditText
            android:id="@+id/editor_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/type_your_note_here_and_click_save"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#AB6592B6"
            android:overScrollMode="always"/>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>