<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/selected_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calender"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dateTextAppearance="@style/CalendarDateText"
            android:weekDayTextAppearance="@style/CalendarWeekText"/>

        <!-- Mini Notepad -->
        <TextView
            android:id="@+id/notepad_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_a_note"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:layout_marginTop="5dp"/>

        <!-- Preview only (not editable) -->
        <EditText
            android:id="@+id/notepad_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="120dp"
            android:hint="@string/click_on_enter_note_to_type_notes"
            android:textColor="@color/black"
            android:textColorHint="#AB6592B6"
            android:background="@android:drawable/edit_text"
            android:padding="10dp"
            android:gravity="top"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"/>

        <Button
            android:id="@+id/editText_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_note"
            android:layout_marginTop="6dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/theme"
            android:textColor="@color/white"/>

    </LinearLayout>

</ScrollView>